get basic info set

--- a/reactlibapp/libraryapp/templates/libraryapp/home.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/home.html
@@ -8,6 +8,10 @@
     <h1>My Home View</h1>
 
     <div id="app">
-        What is this....
+        <center>
+            <p>What is this....</p>
+
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </center>
     </div>
 {% endblock %}
