--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -10,10 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="google-signin-client_id" content="450087630844-n6lfapnuddba615f4kqsuo4b9tontsd6.apps.googleusercontent.com">
 
     <title>{% block title %}Andela Library{% endblock %}</title>
 
      <link href="{% static 'bower_components/semantic/dist/semantic.min.css' %}" rel="stylesheet" type="text/css" media="screen" />
+     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,6 +38,8 @@
 {% block base_js %}
      <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
      <script src="{% static 'bower_components/semantic/dist/semantic.min.js' %}"></script>
+     <script src="{% static 'js/google_user.js' %}"></script>
+
 
 
 {% endblock %}
