--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -15,6 +15,7 @@
     <title>{% block title %}Andela Library{% endblock %}</title>
 
      <link href="{% static 'bower_components/semantic/dist/semantic.min.css' %}" rel="stylesheet" type="text/css" media="screen" />
+     <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css" media="screen" />
      <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
