add basic html structure for home page.

--- a/reactlibapp/libraryapp/templates/libraryapp/main.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/main.html
@@ -4,9 +4,19 @@
 {% block title %}Library | Home{% endblock %}
 
 {% block main %}
-    <div id="header">I am header</div>
-    <div id="text"></div>
-    <div id="signin"></div>
-    <div id="footer">I am footer </div>
-
+    <div id="wrapper">
+        <div id="header"><h1 class="ui block header">CuriousMind</h1></div>
+        <div id="text"></div>
+        <div id="signin"></div>
+        <div id="footer" class="ui clearing segment">
+            <h3 class="ui right floated header">
+                copyright 2016
+            </h3>
+            <h3 class="ui left floated header">
+                Andela
+            </h3>
+        </div>
+    </div>
 {% endblock %}
+
+
