--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -16,6 +16,7 @@
 
      <link href="{% static 'bower_components/semantic/dist/semantic.min.css' %}" rel="stylesheet" type="text/css" media="screen" />
      <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css" media="screen" />
+     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
      <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
