add typedjs for animated typewriting.

--- a/reactlibapp/libraryapp/templates/libraryapp/main.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/main.html
@@ -6,6 +6,7 @@
 {% block main %}
     <div id="wrapper">
         <div id="header"><h1 class="ui block header">CuriousMind</h1></div>
+        <div id="quotesDisplay" class="typed-curso"></div>
         <div id="text"></div>
         <div id="signin"></div>
         <div id="footer" class="ui clearing segment">
