--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -40,6 +40,7 @@
 {% block base_js %}
      <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
      <script src="{% static 'bower_components/semantic/dist/semantic.min.js' %}"></script>
+     <script src="{% static 'bower_components/typed.js/dist/typed.min.js' %}"></script>
      <script src="{% static 'js/google_user.js' %}"></script>
      <script src="{% static 'js/transition.js' %}"></script>
 
