--- a/reactlibapp/libraryapp/templates/libraryapp/main.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/main.html
@@ -7,6 +7,7 @@
     <div id="wrapper">
         <div id="header"><h1 class="ui block header">CuriousMind</h1></div>
         <div id="quotesDisplay" class="typed-curso"></div>
+        <div id="authorDisplay" class="typed-curso"></div>
         <div id="text"></div>
         <div id="signin"></div>
         <div id="footer" class="ui clearing segment">
