add google login button and logout functionality.

--- a/reactlibapp/libraryapp/templates/libraryapp/home.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/home.html
@@ -15,3 +15,22 @@
         </center>
     </div>
 {% endblock %}
+
+
+
+ <center>
+            <button class="ui google plus button custom">
+                <i class="google icon"></i>
+                    Sign in with Andela Gmail
+            </button>
+            </center>
+
+
+<center><div class="g-signin2" data-onsuccess="onSignIn"></div></center>
+
+
+
+<div id="customBtn" class="customGPlusSignIn">
+                <span class="icon"></span>
+                <span class="buttonText">Sign in with Andela Gmail</span>
+            </div>
