--- a/reactlibapp/static/css/main.css
+++ b/reactlibapp/static/css/main.css
@@ -4,7 +4,7 @@ html {
 
 body {
   height: 100%;
-  background: #EDEDED;
+  background: white;
   font-family: "Lato", sans-serif;
   font-weight: 300;
   smoothing: antialiased;
@@ -18,6 +18,7 @@ body {
 .ui.block.header {
     font-family: 'Kaushan Script', cursive;
     background: #4A90E2;
+    border-radius:0;
 }
 
 #wrapper {
@@ -36,6 +37,7 @@ body {
     bottom:0;
     left:0;
     background: #4A90E2;
+    border-radius:0;
 }
 
 .ui.floated.header {
@@ -66,11 +68,80 @@ body {
 
 #quotesDisplay {
  /* background-color:#000;*/
-  width:700px;
   height:120px;
-  padding:12px;
+  padding:46px;
   color:#000;
   font-family:Arial, Helvetica, sans-serif;
   font-size:16px;
   line-height:1.5em;
 }
+
+.divider {
+  width: 100%;
+  height: 1px;
+  margin: 0;
+  overflow: hidden;
+  background-color: rgba(238, 238, 238, 0.5);
+}
+
+.ui.google.plus.button {
+  background-color: #4A90E2;
+}
+
+.ui.google.plus.button:hover {
+  background-color: #4A90E2;
+}
+
+#space {
+  height: 60px;
+}
+
+.signin {
+  margin-top: 37px;
+}
+
+.custom {
+  padding: 1.31714em 7.5em !important;
+}
+
+.google.icon {
+
+}
+
+#customBtn {
+      display: inline-block;
+      background: white;
+      color: #444;
+      width: 280px;
+      border-radius: 5px;
+      border: thin solid #888;
+      box-shadow: 1px 1px 1px grey;
+      white-space: nowrap;
+    }
+    #customBtn:hover {
+      cursor: pointer;
+    }
+    span.label {
+      font-family: serif;
+      font-weight: normal;
+    }
+    span.icon {
+      background: url('../img/btn_google_light_normal_ios.svg') no-repeat;
+      display: inline-block;
+      vertical-align: middle;
+      width: 42px;
+      height: 42px;
+      position: relative;
+      top: -1px;
+      left: -8px;
+    }
+    span.buttonText {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 30px;
+      padding-right: 30px;
+      font-size: 14px;
+      font-weight: bold;
+      /* Use the Roboto font that is loaded in the <head> */
+      font-family: 'Roboto', sans-serif;
+    }
