make page more aesthetics.

--- a/reactlibapp/libraryapp/templates/libraryapp/main.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/main.html
@@ -17,9 +17,8 @@
         <div class="divider"></div>
 
         <center>
-        <div id="my-signin2" class="signin">
-        </div>
-
+            <div id="my-signin2" class="signin"></div>
+            <div><p id="info">For Andela</p></div>
         </center>
 
 
