--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -15,9 +15,15 @@
     <title>{% block title %}Andela Library{% endblock %}</title>
 
      <link href="{% static 'bower_components/semantic/dist/semantic.min.css' %}" rel="stylesheet" type="text/css" media="screen" />
+
      <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css" media="screen" />
+
      <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+
+     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+
      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+
      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
 
@@ -41,14 +47,14 @@
     <div class="ui basic modal">
     <i class="close icon"></i>
         <div class="header">
-            Archive Old Messages
+            <center><P>Something is not right..</P></center>
         </div>
           <div class="image content">
             <div class="image">
-              <i class="archive icon"></i>
+              <i class="warning icon"></i>
             </div>
             <div class="description">
-              <p>Please sign in with your andela account?</p>
+              <center><p>Please sign in with your andela account?</p></center>
             </div>
           </div>
     </div>
