setup react for frontend rendering

--- a/reactlibapp/libraryapp/templates/libraryapp/dashboard.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/dashboard.html
@@ -4,14 +4,5 @@
 {% block title %}Library | dashboard{% endblock %}
 
 {% block main %}
-
-    <h1>My Dashboard View</h1>
-
-    <div id="app">
-        <center>
-            <p>What is this....</p>
-
-            <h4>If you made it here you are logged in</h4>
-        </center>
-    </div>
+    <div id="app"></div>
 {% endblock %}
