--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -65,7 +65,7 @@
      <script src="{% static 'bower_components/typed.js/dist/typed.min.js' %}"></script>
      <script src="{% static 'js/google_user.js' %}"></script>
      <script src="{% static 'js/transition.js' %}"></script>
-
+     <script src="{% static 'dist/index_bundle.js' %}"></script>
 
 
 {% endblock %}
