--- a/reactlibapp/static/css/styles.css
+++ b/reactlibapp/static/css/styles.css
@@ -15,7 +15,37 @@
 }
 
 
-.title {
-    color: #fff;
+#title {
+    color: #4A90E2;
+/*    margin-top: 10px;*/
+    font-family: 'Kaushan Script', cursive;
+}
+
+.ui.block.header {
+    font-family: 'Kaushan Script', cursive;
+    background: #4A90E2;
+    border-radius:0;
+}
+
+#head {
+    background: white;
+}
+
+.footer-title {
+    color: #4A90E2;
     margin-top: 10px;
+}
+
+.bc-grnd {
+    color: white;
+}
+
+#react-footer {
+    width:100%;
+    /*height:100px;*/
+    position:absolute;
+    bottom:0;
+    left:0;
+    background: white;
+    border-radius:0;
 }
