fetch google user detail.

--- a/reactlibapp/static/css/styles.css
+++ b/reactlibapp/static/css/styles.css
@@ -21,6 +21,19 @@
     font-family: 'Kaushan Script', cursive;
 }
 
+/*#header-text {
+    color: #4A90E2;
+    font-family: "Lato", sans-serif;
+}*/
+.cont {
+    display: flex;
+    flex-direction: row;
+}
+
+.item {
+    flex: auto;
+}
+
 .ui.block.header {
     font-family: 'Kaushan Script', cursive;
     background: #4A90E2;
