add tabs to main page.

--- a/reactlibapp/libraryapp/templates/libraryapp/main.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/main.html
@@ -7,7 +7,7 @@
     <div id="wrapper">
         <div id="header"><h1 class="ui block header">CuriousMind</h1></div>
 
-        <div id="space"></div>
+        <div class="space"></div>
         <div class="divider"></div>
 
         <div class="typed">
