--- a/reactlibapp/static/css/main.css
+++ b/reactlibapp/static/css/main.css
@@ -108,6 +108,10 @@ p#quotesDisplay {
 
 .spacebtm {
   height: 20px;
+  width:100%;
+  position:absolute;
+  /*bottom:0;*/
+  left:0;
 }
 
 .signin {
