--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -1,10 +1,13 @@
-{% load staticfiles %}
+{% if environment == 'production' %}
+    {% load staticfiles %}
+{% else %}
+    {% load render_bundle from webpack_loader %}
+{% endif %}
 
 <!DOCTYPE html>
 <html lang="en">
 
 	<head>
-	
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,7 +30,7 @@
                 <script src="{% static 'js/vendor.js' %}"></script>
                 <script src="{% static 'js/app.js' %}"></script>
             {% else %}
-                <script src="{% static 'js/bundle.js' %}"></script>
+                {% render_bundle 'main' %}
             {% endif %}
         {% endblock %}
 	</body>
