--- a/reactlibapp/client/src/sass/app.scss
+++ b/reactlibapp/client/src/sass/app.scss
@@ -11,7 +11,8 @@ $secondary-text-color: #212121;
 
 html,
 #app,
-body {
+body,
+.main {
   box-sizing: border-box;
   height: 100%;
   min-height: 562px;
@@ -32,4 +33,12 @@ body {
   right: 0;
   top: 0;
   z-index: -1;
+}
+
+.main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
