--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -13,7 +13,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
-        {% if environment == 'production' %}<link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/main.css' %}" />{% endif %}
+        {% if environment == 'production' %}
+            <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/vendor.css' %}" />
+            <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/app.css' %}" />
+        {% endif %}
 	</head>
 
 	<body>
