feature(landing-page): create basic page that switches between auth states
- add dummy actions and reducer for authentication state
- create component that displays one of two children depending on authentication state
- create components for navbar, authentication page and dashboard

--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -26,6 +26,7 @@
 
         {% endblock main %}
         
+        <div id="app-background-overlay"></div>
         <div id="app-background"></div>
 
         {% block base_js %}
