--- a/reactlibapp/client/src/sass/app.scss
+++ b/reactlibapp/client/src/sass/app.scss
@@ -1,155 +1,9 @@
-// TODO: Split file into separate concerns
-$black-100: #000;
-$primary-color: #231dc2;
-$dark-primary-color: #0a21a8;
-$light-primary-color: #3359df;
-$primary-text-color: #fff;
-$secondary-color: #ffaf30;
-$dark-secondary-color: #fc9b00;
-$light-secondary-color: #ffc363;
-$secondary-text-color: #212121;
-$small: '(max-width : 600px)';
-$medium: '(min-width : 600px) and (max-width : 1024px)';
-$large: '(min-width : 1024px)';
-$mobile: '(orientation : portrait)';
-$desktop: '(orientation : landscape)';
+@charset 'UTF-8';
 
-@mixin full-page ($z-index: -1, $opacity: 100) {
-  bottom: 0;
-  left: 0;
-  opacity: $opacity;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: $z-index;
-}
+@import 'components/mixins';
+@import 'components/variables';
 
-* {
-  box-sizing: border-box;
-}
+@import 'components/typography';
+@import 'components/layout';
 
-.hide-on-mobile {
-  @media #{$mobile} {
-    display: none;
-  }
-}
-
-.hide-on-desktop {
-  @media #{$desktop} {
-    display: none;
-  }
-}
-
-html,
-#app,
-body,
-.app {
-  height: 100%;
-  min-height: 562px;
-}
-
-body {
-  background: $black-100;
-  color: $primary-text-color;
-  font-family: 'Roboto', sans-serif;
-  font-size: 10px;
-  font-weight: 300;
-
-  @media #{'only screen and #{$medium}'} {
-    font-size: 12px;
-  }
-
-  @media #{'only screen and #{$large}'} {
-    font-size: 14px;
-  }
-}
-
-#app-background-overlay {
-  @include full-page(-5, 60);
-}
-
-#app-background {
-  @include full-page(-10, 0);
-}
-
-.centered-container {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-}
-
-.app {
-  display: flex;
-  flex-direction: column;
-  padding: 2.5%;
-  position: relative;
-
-  .main {
-    flex-grow: 1;
-    height: 90%;
-  }
-}
-
-nav {
-  background: transparent;
-  display: flex;
-  flex-direction: column;
-  height: 10%;
-  justify-content: center;
-  text-align: center;
-
-  @media #{'only screen and #{$large}'} {
-    min-height: 72px;
-  }
-
-  @media #{'only screen and #{$medium}'} {
-    min-height: 64px;
-  }
-
-  @media #{'only screen and #{$small}'} {
-    min-height: 56px;
-  }
-}
-
-.upper {
-  text-transform: uppercase;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 400;
-}
-
-h1 {
-  font-size: 3em;
-  margin: 1em 0;
-}
-
-h2 {
-  font-size: 2.25em;
-  margin: 1.125em 0;
-}
-
-h3 {
-  font-size: 1.75em;
-}
-
-h4 {
-  font-size: 1.5em;
-}
-
-h5 {
-  font-size: 1.25em;
-}
-
-h6 {
-  font-size: 1em;
-}
+@import 'components/navbar';
