feature(landing-page): create Google sign-in button
- implement SVG and Sass for sign-in button
- link button to dummy sign-in action

--- a/reactlibapp/client/src/sass/components/_mixins.scss
+++ b/reactlibapp/client/src/sass/components/_mixins.scss
@@ -11,3 +11,10 @@
   top: 0;
   z-index: $z-index;
 }
+
+@mixin center-contents {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
