--- a/reactlibapp/client/src/sass/components/_navbar.scss
+++ b/reactlibapp/client/src/sass/components/_navbar.scss
@@ -1,3 +1,7 @@
+// ==========================================================================
+// Library app Navbar
+// ==========================================================================
+
 nav {
   background: transparent;
   display: flex;
