--- a/reactlibapp/libraryapp/templates/libraryapp/main.html
+++ b/reactlibapp/libraryapp/templates/libraryapp/main.html
@@ -2,5 +2,9 @@
 {% load static %}
 
 {% block main %}
-  <div id="app"></div>
+  <div id="app">
+    <div class="centered-container">
+      <h4>You need to enable Javascript in your browser to use this app</h4>
+    </div>
+  </div>
 {% endblock %}
