test(landing-page): add tests for landing page
- write tests for actions and reducers
- write tests for newly added components and refactor old component tests

--- a/reactlibapp/client/src/sass/components/_typography.scss
+++ b/reactlibapp/client/src/sass/components/_typography.scss
@@ -29,6 +29,14 @@ body {
   text-transform: uppercase;
 }
 
+nav {
+  font-size: 1.2em;
+}
+
+.cursive {
+  font-family: 'Indie Flower', 'cursive';
+}
+
 h1 {
   font-size: 3em;
   margin: 1em 0;
