chore: rename review table

--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -14,6 +14,7 @@
         <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css' />
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700,500,100" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" />
+        <title> AMITY Library Application </title>
         {% if environment == 'production' %}
             <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/vendor.css' %}" />
             <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/app.css' %}" />
@@ -26,7 +27,7 @@
 
 
         {% endblock main %}
-        
+
         <div id="app-background-overlay"></div>
         <div id="app-background"></div>
 
