--- a/reactlibapp/templates/base.html
+++ b/reactlibapp/templates/base.html
@@ -19,6 +19,7 @@
             <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/vendor.css' %}" />
             <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/app.css' %}" />
         {% endif %}
+        <script src="https://apis.google.com/js/api:client.js"></script>
 	</head>
 
 	<body>
